Button align fix

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ a {
 	color: black;
 	font-family: Arial;
 	font-size: 25px;
+	line-height: 50px;
 	margin: auto;
 	padding-top: 100px;
 	text-align: center;
@@ -27,5 +28,5 @@ nav {
 	margin-left: 100px;
 	margin-top: 100px;
 	text-align: center;
-	width: 200px;
+	width: 250px;
 }
